# dtautom

./: Backend.hs  CHANGELOG.md  Main.hs  Parse.hs  README.md  backend.go  backend_test.go  corewar.go  corewar_test.go  dtautom.cabal  dtautom.go  dtautom_test.go  example.dtaa  example.dtae  interface.go  interface_test.go
