cabal-version:       >=1.10
name:                dtautom
version:             0.1.0.0
license-file:        LICENSE
author:              Dai
maintainer:          daig@users.noreply.github.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable dtautom
  main-is:             Main.hs
  other-modules: Backend, Parse
  build-depends:       base >=4.13 && <4.14 , containers, mtl, lens, vector, megaparsec, text
  default-extensions: ViewPatterns, NamedFieldPuns, BlockArguments, LambdaCase, GeneralizedNewtypeDeriving,DerivingStrategies, DerivingVia, PatternSynonyms, OverloadedStrings
  default-language:    Haskell2010
